# hytale-ui-studio

./: .gitignore  BUGFIXES.md  DESIGN.md  PRODUCT.md  README.md  README.pt-br.md  debug-flex.js  debug-padding.ts  force-reparse.js  index.html  main.tsx  next.config.mjs  package.json  parse_test.ts  pnpm-lock.yaml  test-exact.ts  test-hytale-gen.ts  test-markup-features.ts  test-parse.ts  test-parser.ts  test-style.ts  test-styles.js  test2.js  vite.config.ts
.github/workflows/: build.yml
.impeccable/: design.json
.impeccable/critique/: 2026-06-03T20-52-27Z__app-page-tsx.md
app/: globals.css  layout.tsx  page.tsx
components/: drag-drop-polyfill.tsx  loading-screen.tsx
components/__tests__/: loading-screen.test.tsx
components/editor/: canvas.tsx  changelog-modal.tsx  code-editor.tsx  command-palette.tsx  component-content-renderer.tsx  component-palette.tsx  component-tree.tsx  debounced-color-picker.tsx  debounced-input.tsx  file-explorer.tsx  history-popover.tsx  inspector.tsx  mobile-nav.tsx  rendered-component.tsx  start-screen.tsx  status-bar.tsx  toolbar.tsx  types.ts
components/ui/: scroll-area.tsx
hooks/: use-keyboard-shortcuts.ts
lib/: common-definitions.ts  component-definitions.ts  editor-store.ts  export-utils.ts  hytale-parser.ts  hytale-types.ts  plugin-sandbox.ts  tauri-utils.ts  templates-data.ts  tree-utils.ts  utils.ts
public/: LayoutTest.ui
scripts/: build.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
styles/: globals.css
(+32 files in other folders)
