[package]
name = "hytale-ui-studio"
version = "1.0.0"
description = "Hytale UI Studio is a powerful, web-based visual editor designed specifically for creating and managing user interfaces for Hytale. Built with modern web technologies, it provides an intuitive drag-and-drop experience coupled with a real-time code editor and live preview."
authors = ["cookieukw"]
license = "GPL-3.0-or-later"
repository = "https://github.com/cookieukw/hytale-ui-studio"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
